Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,65 +1,43 @@
-<!doctype html>
-<html lang="en-US">
-<head>
-<title>
-My 240 Assignment Page
-</title>
-<meta charset="utf-8">
-</head>
-<body>
-<h1 align="center">My 240 Assignment Page</h1>
-<h2>My Most Visited Sites</h2>
-<ul>
-<li><a href="https://www.wikipedia.org/" target="_blank">Wikipedia</a></li>
-<li><a href="https://www.ingress.com/intel" target="_blank">Ingress Intel</a></li>
-<li><a href="http://www.bbbsmilwaukee.org/site/c.8hKPI2MGIkI0E/b.6448991/k.4C96/Thanks_for_being_a_Big.htm" target="_blank">BBBS Milwaukee</a></li>
-<li><a href="http://dnr.wi.gov/topic/parks/" target="_blank">Wisconsin DNR Parks Page</a></li>
-</ul>
-<h2>My Assignments</h2>
-<ol>
-<li>
-<a href="http://www.paulruss.uwmsois.com/hiking.html" target="_blank">Hiking Page</a>
-</li>
-<li>
-<a href="http://www.paulruss.uwmsois.com/assign3.html" target="_blank">Usability Table</a>
-</li>
-<li>
-<a href="http://www.paulruss.uwmsois.com/thngvbt.html" target="_blank">Charity Form</a>
-</li>
-<li>
-<a href="http://paulruss.uwmsois.com/resume.html" target="_blank">Resume/CSS shenanigans</a>
-</li>
-<li>
-<a href="http://paulruss.uwmsois.com/article.html" target="_blank">News article CSS layout practice</a>
-</li>
-<li>
-<a href="http://paulruss.uwmsois.com/supportForm.html" target="_blank">Support Form with more CSS</a>
-</li>
-<li>
-<a href="http://paulruss.uwmsois.com/navBar-online/navbarAssignment.html" target="_blank">JS navbar</a>
-</li>
-<li>
-<a href="http://paulruss.uwmsois.com/dropdownMenuBar.html" target="_blank">CSS dropdown menu page</a>
-</li>
-<li>
-<a href="http://paulruss.uwmsois.com/utube.html" target="_blank">Videos with JS manipulated CSS</a>
-</li>
-<li>
-<a href="http://paulruss.uwmsois.com/props.html" target="_blank">Manipulating Image Properties</a>
-</li>
-<li>
-<a href="http://paulruss.uwmsois.com/utube.html" target="_blank">Videos with JS manipulated CSS</a>
-</li>
-<li>
-<a href="http://paulruss.uwmsois.com/dataValid.html" target="_blank">Data Validation Assignment</a>
-</li>
-<li>
-<a href="http://paulruss.uwmsois.com/Gallery/gallery.html" target="_blank">JQuery Gallery</a>
-</li>
-</ol>
-<br/><br/>
-<h3>This is me:</h3>
-<p><img src="hikingDevilsLake.jpg" alt="Photo of author hiking on a bluff" width="300px" height="400px"></p>
-<p>I like hiking.</p>
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+
+    <title>PaulyRuss.net by PaulyPedantic</title>
+  </head>
+
+  <body>
+
+    <header>
+      <div class="container">
+        <h1>PaulyRuss.net</h1>
+        <h2>I want to work with people, constantly learn new tech, and apply IT to business.</h2>
+
+        <section id="downloads">
+          <a href="https://github.com/PaulyPedantic" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
+
+    <div class="container">
+      <section id="main_content">
+        <h3>
+<a id="hello-world" class="anchor" href="#hello-world" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hello World</h3>
+
+<p>My name is Pauly Russ, and I'm a technical analyst studying information science and trying to learn as much as I can about the technical and business sides of the IT world. Right now, this simple greeting will be my placeholder as I work on what I actually want to say with this page.</p>
+
+<h3>
+<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
+
+<p>While I'm working though, you can contact me on: <a href="www.linkedin.com/in/PaulyRuss">LinkedIn</a> or <a href="https://twitter.com/PaulyPedantic">Twitter</a>.</p>
+      </section>
+    </div>
+
+    
+  </body>
 </html>
