fix broken link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
 
-<p>While I'm working though, you can contact me on: <a href="www.linkedin.com/in/PaulyRuss">LinkedIn</a> or <a href="https://twitter.com/PaulyPedantic">Twitter</a>.</p>
+<p>While I'm working though, you can contact me on: <a href="https://www.linkedin.com/in/PaulyRuss">LinkedIn</a> or <a href="https://twitter.com/PaulyPedantic">Twitter</a>.</p>
       </section>
     </div>
 
