--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Pauly Russ - Homepage</title>
+    <title>PaulyRuss.net by PaulyPedantic</title>
   </head>
 
   <body>
@@ -36,7 +36,7 @@
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
 
-<p>While I'm working on that, feel free to contact me on: <a href="www.linkedin.com/in/PaulyRuss">LinkedIn</a> or <a href="https://twitter.com/PaulyPedantic">Twitter</a>.</p>
+<p>While I'm working though, you can contact me on: <a href="www.linkedin.com/in/PaulyRuss">LinkedIn</a> or <a href="https://twitter.com/PaulyPedantic">Twitter</a>.</p>
         </section>
 
         <aside id="sidebar">
