Revert "change twitter button to follow function"
This reverts commit fb439eef95d2f5446f5a730f209090473d1a11bf.

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 					</form>
 				</div>
 				<div class="col-md-2">
-					<a href="https://twitter.com/PaulyPedantic" class="btn btn-lg btn-default btn-block" id="twitter" data-show-count="false"><i class="fa fa-twitter-square" aria-hidden="true" target="_blank"></i> Follow<span class="sr-only"> on Twitter</span></a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+					<a href="https://twitter.com/PaulyPedantic" target="_blank" class="btn btn-lg btn-default btn-block" id="twitter"><i class="fa fa-twitter-square" aria-hidden="true"></i> Follow<span class="sr-only"> on Twitter</span></a>
 					<a href="https://github.com/PaulyPedantic" target="_blank" class="btn btn-lg btn-default btn-block" id="github"><i class="fa fa-github-square" aria-hidden="true"></i> Watch<span class="sr-only"> on Git hub</span></a>
 					<a href="https://www.linkedin.com/in/paulyruss" target="_blank" class="btn btn-lg btn-default btn-block" id="linkedIn"><i class="fa fa-linkedin-square" aria-hidden="true"></i> Connect<span class="sr-only"> on Linked In</span></a>
 				</div>
