html changes to accompany css cleanup
See commit to css that closes issue #2

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
   </head>
 
-	<body data-spy="scroll" data-target=".navbar" data-offset="50">
+		<body data-spy="scroll" data-target=".navbar" data-offset="50">
 		<div class="container-fluid">
 			<nav class="navbar navbar-inverse navbar-fixed-top navFix">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" alt="Show Navigation Options">
@@ -32,7 +32,7 @@
 			</nav>
 		</div>
 	
-		<div class="jumbotron intro fullHeight bg-img-section" id="home">
+		<div class="jumbotron intro section bg-img-section" id="home">
 			<h1>My name is Pauly Russ. </h1>
 			<p class="lead">I'm a Technical Analyst, and I've built this page to tell you about myself. I enjoy tech, music, and the outdoors. I want to have a positive impact on the world. If you want more than the bullet points, </p>
 			<p class="lead"><a href="#contact" class="btn btn-lg btn-success">Let's talk</a></p>
@@ -108,7 +108,7 @@
 			</div>
 		</div>
 	
-		<div id="contact" class="bg-img-section section fullHeight clearfix">
+		<div id="contact" class="bg-img-section section fullHeight">
 			<div class="container">
 				<h3 class="sectionHead">Contact</h3>
 				<p> The contact form below sends me an email. If social is more your element, the buttons lead to my pages on Twitter, Github, and LinkedIn</p>
@@ -136,7 +136,7 @@
 					</div>
 					<div class="col-md-2">
 						<a href="https://twitter.com/PaulyPedantic" class="btn btn-lg btn-default btn-block" id="twitter" data-show-count="false"><i class="fa fa-twitter-square" aria-hidden="true" target="_blank"></i> Follow<span class="sr-only"> on Twitter</span></a>
-						<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 						<a href="https://github.com/PaulyPedantic" target="_blank" class="btn btn-lg btn-default btn-block" id="github"><i class="fa fa-github-square" aria-hidden="true"></i> Watch<span class="sr-only"> on Git hub</span></a>
 						<a href="https://www.linkedin.com/in/paulyruss" target="_blank" class="btn btn-lg btn-default btn-block" id="linkedIn"><i class="fa fa-linkedin-square" aria-hidden="true"></i> Connect<span class="sr-only"> on Linked In</span></a>
 					</div>
@@ -147,9 +147,5 @@
 		<div class="container-fluid text-center" id="footer">
 			<p>I'm still learning. Please <a href="#contact">contact me</a> to report bugs so I can get better. <i class="fa fa-thumbs-o-up"></i></p>
 		</div>
-	
-		<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
-        	<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
-        	<script src="js/index.js"></script>
-  	</body>
+	</body>
 </html>
