put back js links accidentally removed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
   </head>
 
-		<body data-spy="scroll" data-target=".navbar" data-offset="50">
+	<body data-spy="scroll" data-target=".navbar" data-offset="50">
 		<div class="container-fluid">
 			<nav class="navbar navbar-inverse navbar-fixed-top navFix">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" alt="Show Navigation Options">
@@ -147,5 +147,8 @@
 		<div class="container-fluid text-center" id="footer">
 			<p>I'm still learning. Please <a href="#contact">contact me</a> to report bugs so I can get better. <i class="fa fa-thumbs-o-up"></i></p>
 		</div>
+		<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>		
+ -        	<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>		
+ -        	<script src="js/index.js"></script>
 	</body>
 </html>
