--- a/index.html
+++ b/index.html
@@ -111,25 +111,25 @@
 		<div id="contact" class="bg-img-section section fullHeight">
 			<div class="container">
 				<h3 class="sectionHead">Contact</h3>
-				<p> The contact form below sends me an email. If social is more your element, the buttons lead to my pages on Twitter, Github, and LinkedIn</p>
+				<p> I like having a contact form as part of the page, and as soon as I migrate the page from <a href="www.github.io" target="_blank"> Github Pages </a> to a dedicated host, I can write the server side code to make it actually send an email. For now, I'd love to talk to you through my accounts on Twitter, Github, and LinkedIn linked by the buttons below.</p>
 				<div class="row">
 					<div class="col-md-7 col-md-offset-1">
 						<form class="form-horizontal">
 							<div class="form-group">
 								<label for="userEmail" class="col-sm-2 control-label">Email</label>
 								<div class="col-sm-10">
-									<input type="email" class="form-control" id="userEmail" placeholder="Please provide an email address I can reply to.">
+									<input type="email" class="form-control" id="userEmail" placeholder="Please provide an email address I can reply to." disabled="true">
 								</div>
 							</div>
 							<div class="form-group">
 								<label for="userMessage" class="col-sm-2 control-label">Message</label>
 								<div class="col-sm-10">
-									<textarea class="form-control" id="userMessage" placeholder="Type a message here if you have a question, comment, or want to work together." rows="5"></textarea>
+									<textarea class="form-control" id="userMessage" placeholder="Type a message here if you have a question, comment, or want to work together." rows="5" disabled="true"></textarea>
 								</div>
 							</div>
 							<div class="form-group">
 								<div class="col-sm-offset-2 col-sm-10">
-									<button type="submit" class="btn btn-lg btn-success">Submit</button>
+									<button type="submit" class="btn btn-lg btn-success" disabled="true">Submit</button>
 								</div>
 							</div>
 						</form>
