change social buttons and links
Add inlineLink class, make button column 1 bootstrap unit wider, add free code camp button

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 		<div id="contact" class="bg-img-section section fullHeight">
 			<div class="container">
 				<h3 class="sectionHead">Contact</h3>
-				<p> I like having a contact form as part of the page, and as soon as I migrate the page from <a href="www.github.io" target="_blank"> Github Pages </a> to a dedicated host, I can write the server side code to make it actually send an email. For now, I'd love to talk to you through my accounts on Twitter, Github, and LinkedIn linked by the buttons below.</p>
+				<p> I like having a contact form as part of the page, and as soon as I migrate the page from <a href="www.github.io" target="_blank" class="inlineLink"> Github Pages </a> to a dedicated host, I can write the server side code to make it actually send an email. For now, I'd love to talk to you through my accounts on Twitter, Github, and LinkedIn linked by the buttons below.</p>
 				<div class="row">
-					<div class="col-md-7 col-md-offset-1">
+					<div class="col-md-6 col-md-offset-1">
 						<form class="form-horizontal">
 							<div class="form-group">
 								<label for="userEmail" class="col-sm-2 control-label">Email</label>
@@ -134,11 +134,11 @@
 							</div>
 						</form>
 					</div>
-					<div class="col-md-2">
-						<a href="https://twitter.com/PaulyPedantic" class="btn btn-lg btn-default btn-block" id="twitter" data-show-count="false"><i class="fa fa-twitter-square" aria-hidden="true" target="_blank"></i> Follow<span class="sr-only"> on Twitter</span></a>
-	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-						<a href="https://github.com/PaulyPedantic" target="_blank" class="btn btn-lg btn-default btn-block" id="github"><i class="fa fa-github-square" aria-hidden="true"></i> Watch<span class="sr-only"> on Git hub</span></a>
-						<a href="https://www.linkedin.com/in/paulyruss" target="_blank" class="btn btn-lg btn-default btn-block" id="linkedIn"><i class="fa fa-linkedin-square" aria-hidden="true"></i> Connect<span class="sr-only"> on Linked In</span></a>
+					<div class="col-md-3">
+						<a href="https://twitter.com/PaulyPedantic" class="btn btn-lg btn-default btn-block" id="twitter" data-show-count="false"><i class="fa fa-twitter-square" aria-hidden="true" target="_blank"></i> Twitter</a>
+						<a href="https://github.com/PaulyPedantic" target="_blank" class="btn btn-lg btn-default btn-block" id="github"><i class="fa fa-github-square" aria-hidden="true"></i> Github</a>
+						<a href="https://www.linkedin.com/in/paulyruss" target="_blank" class="btn btn-lg btn-default btn-block" id="linkedIn"><i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</a>
+						<a href="https://www.freecodecamp.com/paulypedantic" target="_blank" class="btn btn-lg btn-default btn-block" id="freeCodeCamp"><i class="fa fa-fire" aria-hidden="true"></i> FreeCodeCamp</a>
 					</div>
 				</div>
 			</div>
