update poor copy

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 		<div id="contact" class="bg-img-section section fullHeight">
 			<div class="container">
 				<h3 class="sectionHead">Contact</h3>
-				<p> I like having a contact form as part of the page, and as soon as I migrate the page from <a href="www.github.io" target="_blank" class="inlineLink"> Github Pages </a> to a dedicated host, I can write the server side code to make it actually send an email. For now, I'd love to talk to you through my accounts on Twitter, Github, and LinkedIn linked by the buttons below.</p>
+				<p> I like having a contact form as part of the page, and as soon as I migrate the page from <a href="www.github.io" target="_blank" class="inlineLink"> Github Pages </a> to a dedicated host, I can write the server side code to make it actually send an email. For now, I'd love to talk to you through my accounts on Twitter, Github, LinkedIn, or Free Code Camp. You can find me using the buttons below.</p>
 				<div class="row">
 					<div class="col-md-6 col-md-offset-1">
 						<form class="form-horizontal">
