--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						<li>Servant and Horizontal Leadership</li>
 						<li>Coaching, Conflict and Change Management</li>
 						<li>Strategic Thinking and Decision Quality.</li>
-						<li>Self-Awareness and Listening</li>
+						<li>Interpersonal Communications, Self-Awareness, and Listening</li>
 					</ul>
 				</div>
 			</div>
@@ -85,9 +85,9 @@
 				<h3 class="sectionHead">My Story</h3>
 				<p>I was born and raised in Racine, Wisconsin. After high school, I moved a little bit north to Milwaukee for college where I studied Music Composition and Technology at the University of Wisconsin-Milwaukee. During my time there, I became interested
 					in and devoted my personal projects and a good chunk of my elective studies to programming, computer music, and digital art. After leaving school, I turned my tech skills into a career path, working full time at Quad/Graphics in List Management. I
-					advanced quickly through the levels of my role, and with the guidance of several key mentors, I grew into an Information Technology role as a member of the Analyst team Recently, I returned to UWM enrolled part-time in the School of Information Science,
+					advanced quickly through the levels of my role, and with the guidance of several key mentors, I grew into an Information Technology role as a technically oriented member of the Analyst team. Recently, I returned to UWM enrolled part-time in the School of Information Science,
 					and I'm poised to graduate in December 2016 with a Bachelor of Science in Information Science and Technology.</p>
-				<p>I'm actively working to learn new things daily, emphasizing skills in business, technology, and leadership. My ultimate goal is to develop into a major influencer in a non-profit or business with a mission to address education, poverty alleviation,
+				<p>I'm actively working to learn new things daily, emphasizing skills in business, technology, and leadership. My ultimate goal is to develop into a technology leadership role and influence the direction of a major non-profit or an industry leading business with values that center around having a positive impact in the community. My community service interests center around education, poverty alleviation,
 					youth outreach, or medical care accessibility. To further that goal, after I've completed my BS I plan to research and enroll in an MBA program that offers an emphasis in Management Information Systems or similar areas of study.
 				</p>
 			</div>
