replace div id footer with footer tag
some dummy didn't properly use semantic markup

--- a/index.html
+++ b/index.html
@@ -144,8 +144,10 @@
 			</div>
 		</div>
 	
-		<div class="container-fluid text-center" id="footer">
-			<p>I'm still learning. Please <a href="#contact">contact me</a> to report bugs so I can get better. <i class="fa fa-thumbs-o-up"></i></p>
+		<div class="container-fluid text-center">
+			<footer>
+				<p>I'm still learning. Please <a href="#contact">contact me</a> to report bugs so I can get better. <i class="fa fa-thumbs-o-up"></i></p>
+			</footer>
 		</div>
 		<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>		
  -        	<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>		
