clean up some some git chars

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 			</footer>
 		</div>
 		<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>		
- -        	<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>		
- -        	<script src="js/index.js"></script>
+         	<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>		
+         	<script src="js/index.js"></script>
 	</body>
 </html>
